# bowlingScore

./: .gitignore  GUI.py  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
src/bowlingScore/: __init__.py  scoreTable.py
src/bowlingScore/bowlingGame/: __init__.py  bowlingGame.py  bowlingThows.py
tests/: testBowlingGame.py  test_bowlingScore.py
