[metadata]
name = bowlingScore
description = table of bowling score
author = Cristian Rodrigo Guarachi Ibanez
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bowlingScore
install_requires =
    PyQt5==5.15.7
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.11.0
    PyQt5-stubs==5.15.6.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
bowlingScore = py.typed

[flake8]
max-line-length = 160